2021-02-20  Jose E. Marchesi  <jemarch@gnu.org>

	* man/Makefile.am (poke.1): Avoid TAB-8-space indentation in
	Makefile.
	* libpoke/Makefile.am: Spell time-stamp.
	* poke/Makefile.am: Likewise.

2021-02-20  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Set POKE_AWK and do not error out at configure
	time if no suitable awk is found.
	* libpoke/Makefile.am (.pks.pkc): Check that AWK is powerful
	enough for RAS.  Error out otherwise.

2021-02-20  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* testsuite/poke.mi-json/mi-json.c (test_json_pk_sct): Remove unused
	variable(s).
	(test_val_to_json): Likewise.
	(read_json_object): Change the type of `cap` to `ssize_t` to make the
	compiler happy (-Wsign-compare).

2021-02-20  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* libpoke/pvm.jitter (PVM_PRINTI): Fix bit-depth of printed negative
	values in base 8 and 16.
	(PVM_PRINTL): Likewise.
	* testsuite/poke.pkl/printf-28.pk: New test.
	* testsuite/poke.pkl/printf-29.pk: Likewise.
	* testsuite/poke.pkl/printf-30.pk: Likewise.
	* testsuite/poke.pkl/printf-31.pk: Likewise.
	* testsuite/poke.pkl/printf-32.pk: Likewise.
	* testsuite/poke.pkl/printf-33.pk: Likewise.
	* testsuite/poke.pkl/printf-34.pk: Likewise.
	* testsuite/poke.pkl/printf-35.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2021-02-19  Jose E. Marchesi  <jemarch@gnu.org>

	* pickles/dwarf-frame.pk (Dwarf_CIE): Fix constant.

2021-02-19  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>

	* testsuite/poke.mi-json/mi-json.c (test_json_to_val_to_json):
	Simplify the JSON file selection loop.

2021-02-16  Indu Bhagat  <indu.bhagat@oracle.com>

        * pickles/ctf.pk (CTF_Header): Use offset field type for cth_lbloff.
        (CTF_Integer_Type): Use integral struct.
        (CTF_Float_Type): Likewise.
        (CTF_Slice): New definition.
        (CTF_Type): CTF_KIND_ENUM is followed by a vlen number of enum records.
        CTF_KIND_FUNCTION has a trailing padding of 4 bytes if the number of